updated code to get auto fill address

--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,8 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "src/assets/js/cc_c2a.min.js"            ]
           },
           "configurations": {
             "production": {
